3_phaseIII/x_harbor/ingress-harbor-prod.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: harbor
  name: ingress-harbor
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
  - hosts:
    - harbor.jupyteronline.com
    secretName: harbor-secret
  rules:
    # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
    - host: harbor.jupyteronline.com
      http:
        paths:
            - backend:
                serviceName: harbor-harbor-portal
                servicePort: 80
              path: /
            - backend:
                serviceName: harbor-harbor-core
                servicePort: 80
              path: /api/
            - backend:
                serviceName: harbor-harbor-core
                servicePort: 80
              path: /service/
            - backend:
                serviceName: harbor-harbor-core
                servicePort: 80
              path: /v2/
            - backend:
                serviceName: harbor-harbor-core
                servicePort: 80
              path: /chartrepo/
            - backend:
                serviceName: harbor-harbor-core
                servicePort: 80
              path: /c/
    - host: notary.harbor.jupyteronline.com
      http:
        paths:
            - backend:
                serviceName: harbor-harbor-notary-server
                servicePort: 4443
              path: /
